--- a/requirements.txt
+++ b/requirements.txt
@@ -5,3 +5,10 @@ Flask-Login==0.5.0
 Flask-Bcrypt==0.7.1
 flask-wtf==1.2.1
 SQLAlchemy==1.4.46
+psycopg2-binary==2.9.9
+python-dotenv==1.0.0
+gunicorn==21.2.0
+# pytest==7.4.3  #Framework para testes automatizados
+pytest-cov==4.1.0
+black==23.11.0
+# flake8==6.1.0 # Ferramenta de análise estática de código
