--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,4 +1,5 @@
 stages:
+  - format
   - lint
   - compile
   - test
@@ -28,18 +29,34 @@ workflow:
       when: always
     - when: never
 
+# Job de Formatação Automática
+format_code:
+  stage: format
+  image: python:3.9-slim-buster
+  script:
+    - pip install black isort
+    - black .
+    - isort .
+  rules:
+    - if: $CI_COMMIT_BRANCH == "master" || $CI_COMMIT_BRANCH == "staging" || $CI_COMMIT_BRANCH == "development"
+
 # Jobs de Linting e Análise de Código
 lint_python:
   stage: lint
   image: python:3.9-slim-buster
   script:
     - pip install flake8 black isort
-    - flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
-    - black . --check
-    - isort . --check-only
+    - flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics --output-file=flake8-report.txt
+    - black . --check --diff > black-report.txt || true
+    - isort . --check-only --diff > isort-report.txt || true
   artifacts:
     reports:
-      codequality: gl-code-quality-report.json
+      codequality: flake8-report.txt
+    paths:
+      - flake8-report.txt
+      - black-report.txt
+      - isort-report.txt
+    expire_in: 1 week
   rules:
     - if: $CI_COMMIT_BRANCH == "master" || $CI_COMMIT_BRANCH == "staging" || $CI_COMMIT_BRANCH == "development"
 
