--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -21,13 +21,8 @@ workflow:
   rules:
     - if: $CI_COMMIT_TAG
       when: always
-    - if: $CI_COMMIT_BRANCH == "master"
+    - if: $CI_COMMIT_BRANCH
       when: always
-    - if: $CI_COMMIT_BRANCH == "staging"
-      when: always
-    - if: $CI_COMMIT_BRANCH == "development"
-      when: always
-    - when: never
 
 # Job de Formatação Automática
 format_code:
@@ -74,7 +69,7 @@ compile_job:
       - venv/
     expire_in: 1 day
   rules:
-    - if: $CI_COMMIT_BRANCH == "master" || $CI_COMMIT_BRANCH == "staging" || $CI_COMMIT_BRANCH == "development"
+    - if: $CI_COMMIT_REF_NAME  # Executa para qualquer branch
 
 # Jobs de Teste
 test_unit:
