--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -41,7 +41,8 @@ lint_python:
   image: python:3.9-slim-buster
   script:
     - pip install flake8 black isort
-    - flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics --output-file=flake8-report.txt
+    - find . -type f -name "*.py" | sort  # Lista todos os arquivos Python
+    - flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics --verbose --output-file=flake8-report.txt
     - black . --check --diff > black-report.txt || true
     - isort . --check-only --diff > isort-report.txt || true
   artifacts:
@@ -54,6 +55,7 @@ lint_python:
     expire_in: 1 week
   rules:
     - if: $CI_COMMIT_BRANCH == "master" || $CI_COMMIT_BRANCH == "staging" || $CI_COMMIT_BRANCH == "development"
+
 
 # Jobs de Compilação
 compile_job:
