--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -26,7 +26,6 @@ workflow:
 
 # Job de Formatação Automática
 format_code:
-  needs: []  # Executa primeiro
   stage: format
   image: python:3.9-slim-buster
   script:
@@ -38,20 +37,15 @@ format_code:
 
 # Jobs de Linting e Análise de Código
 lint_python:
-  needs: ["format"]  # Executa após formatação
   stage: lint
   image: python:3.9-slim-buster
   script:
     - pip install flake8 black isort
-    # Listar todos os arquivos Python para debug
-    - find . -type f -name "*.py" | sort
-    # Rodar Flake8 e salvar o relatório, mas não interromper o pipeline
-    - flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics --verbose --output-file=flake8-report.txt || echo "Lint errors found"
-    # Black e Isort para verificar o formato do código
-    - black . --check --diff > black-report.txt || echo "Black format errors found"
-    - isort . --check-only --diff > isort-report.txt || echo "Isort format errors found"
+    - find . -type f -name "*.py" | sort  # Lista todos os arquivos Python
+    - flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics --verbose --output-file=flake8-report.txt
+    - black . --check --diff > black-report.txt || true
+    - isort . --check-only --diff > isort-report.txt || true
   artifacts:
-    when: always  # Sempre gera artefatos, mesmo quando falha
     reports:
       codequality: flake8-report.txt
     paths:
@@ -62,10 +56,8 @@ lint_python:
   rules:
     - if: $CI_COMMIT_BRANCH == "master" || $CI_COMMIT_BRANCH == "staging" || $CI_COMMIT_BRANCH == "development"
 
-
 # Jobs de Compilação
 compile_job:
-  needs: ["lint"]  # Executa após linting
   stage: compile
   image: python:3.9-slim-buster
   script:
@@ -157,7 +149,7 @@ build:
   services:
     - docker:dind
   script:
-    - docker build --cache-from taskmanager:latest -t taskmanager:$CI_COMMIT_SHA .
+    - docker build -t taskmanager:$CI_COMMIT_SHA .
     - docker tag taskmanager:$CI_COMMIT_SHA taskmanager:latest
   rules:
     - if: $CI_COMMIT_BRANCH == "master" || $CI_COMMIT_BRANCH == "staging" || $CI_COMMIT_BRANCH == "development"
