--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -77,7 +77,9 @@ test_unit:
   stage: test
   image: python:3.9-slim-buster
   script:
+    - python -m venv venv  # Garante que o ambiente virtual está criado
     - source venv/bin/activate
+    - pip install -r requirements.txt
     - pip install pytest pytest-cov
     - pytest tests/unit/ --cov=./ --cov-report=xml --cov-report=html
   artifacts:
